--- a/vignettes/still_life_form_content.Rmd
+++ b/vignettes/still_life_form_content.Rmd
@@ -18,7 +18,7 @@ library(tibble)
 library(ggplot2)
 library(ggrepel)
 library(randomForest)
-knitr::opts_chunk$set(fig.width = 9, fig.height = 9, warning = FALSE, echo = FALSE, cache = TRUE)
+knitr::opts_chunk$set(fig.width = 9, fig.height = 9, warning = FALSE, echo = FALSE, cache = TRUE, dev = "pdf")
 ```
 
 ## What are random forests? Why use them?
@@ -195,120 +195,30 @@ all_quals_error <- ggplot(all_error, aes(x = composition_only, y = motif_only, c
 all_quals_error
 ```
 
-
 ## Local variable importance
 
-```{r local_imp_byartist}
-rfv <- rf_votes(known_only_motif) %>% 
-  gather(predicted, votes, -painting_code) %>% 
-  inner_join(dt_compiled, by = "painting_code") %>% 
-  filter(predicted == "Pieter Claesz") %>% 
-  select(votes, artist, one_of(c("LV", "N", "T1", "T", "Ch", "LV2", "Fi"))) %>% 
-  gather(term, value, -votes, -artist) %>% 
-  filter(value == TRUE)
+Having indentified which artists are readily predictable by particular motifs or compositional variants, we can then identify what those most distinctive motifs are, either in their presence, or their absence.
+A downside of random forest models is that they are more challenging to interpret than a traditional classifier such as a logarithmic regression.
+In logarithmic regression, each explanatory variable is treated independently[^indvar], with the model assigning an explicit coefficient to each variable.
+The larger the coefficient (either positive or negative), the greater the effect that variable has on the probability of an observation being slotted into a particular class.
+In a single decision tree, however, variables have the potential for complex dependent interactions (If, for example, A is larger than B, then C has a positive effect, but if A is less than B, C instead has a negative effect) not easily summed up by a single metric.
+Random forests - an ensemble of decision trees - compound this complexity.
+The very nuance that gives them their predictive power also makes them more challenging to interpret.
 
-ggplot(rfv, aes(x = term, y = votes, color = artist == "Pieter Claesz")) +
-  facet_wrap(~ term, scales = "free_x") +
+[^indvar]: Save for interaction variables, though those must be explicitly defined ahead of time; @james2013, 115.
+
+To visualize the inner workings of this tree, we can rank the variables by an empirically-measured importance metric[^impmetric], and then see how the value of those variables actually impacts the confidence of the model when it tries to make predictions about a given artist.
+In cases where the presence of a motif (e.g. `"leafy vegatation" == TRUE`) results in more of the trees voting in favor of the correct artist, we can conclude that variable is a _positive_ indicator of a given classification.
+On the other hand, when its presence results in almost no trees voting for the given artist, we can identify it as a _negative_ indicator of that attribution.
+
+[^impmetric]: The random forest model as implemented by @liaw2002 calculates variable inportance for a given class by averaging the mean decrease in accuracy for a given class (in this case, for a given artist) across all trees that occurs when the given variable is permuted - its values put in to random order, rendering it meaningless. The theory goes: the more important that variable is in the behavior of the model, the more negative the impact when that variable is effectively removed from the data.
+
+```{r local_imp_byartist}
+pc_votes <- rf_effects(known_only_comp, class = "Pieter Claesz")
+
+ggplot(pc_votes, aes(x = term, y = votes, color = is_true_positive)) +
+  facet_wrap(term ~ metric_value, scales = "free_x") +
   geom_jitter()
 ```
 
-
-It is also possible
-
-```{r pca, fig.width=4, fig.height=4}
-single_rf <- rfl$motif_only.simple.definite_only.qualified_only.classification
-
-rfl_pca <- map(set_names(levels(single_rf$predicted)), function(x) {
-  rf_local_importance(single_rf) %>% 
-    semi_join(dt_compiled %>% filter(artist == x[1]), by = c("rowname" = "painting_code")) %>% 
-    column_to_rownames("rowname") %>% 
-    prcomp()
-})
-
-join_loadings <- function(pca) {
-  pca_loadings_df(pca) %>% 
-    left_join(dt_motif_labels, by = c("rowname" = "motif_code")) %>% 
-    mutate(varlab = ifelse(is.na(wrapped_motif_label), rowname, motif_label))
-}
-
-rfl_loadings <- map(rfl_pca, join_loadings)
-
-rfl_observations <- map(rfl_pca, pca_obs_df)
-
-
-artist_motif_plot <- function(l, o, m = 12, hue = "red") {
-  l %>% 
-    filter(min_rank(desc(power)) <= m) %>% 
-    ggplot(aes(x = PC1, y = PC2)) +
-    geom_text(data = o, aes(label = rownames), alpha = 0.5) +
-    geom_segment(aes(xend = 0, yend = 0), color = hue) +
-    geom_label_repel(aes(label = varlab))
-}
-
-rfl_plots <- map2(rfl_loadings, rfl_observations, artist_motif_plot) %>% 
-  map2(., names(rfl_observations), function(x, y) x + ggtitle(y))
-
-#walk2(rfl_plots, seq_len(length(rfl_plots)), function(rfl_plot, y) multiplot(p = rfl_plot, postfix = y, height = 7, width = 10))
-```
-
-## Painting dates
-
-```{r rf_date}
-library(randomForestCI)
-
-motif_date <- rfl$motif_only.year.definite_only.qualified_only.regression
-comp_date <- rfl$composition_only.year.definite_only.qualified_only.regression
-motif_date_ci <- randomForestInfJack(comp_date, rf_x(comp_date)) %>% 
-  rownames_to_column(var = "painting_code")
-
-rf_resid <- function(rf) {
-  stopifnot(rf$type == "regression")
-  
-  rn <- rf_rownames(rf)
-  
-  ci <- randomForestInfJack(rf, newdata = rf_x(rf)) %>% 
-    rownames_to_column(var = rn)
-  
-  data.frame(predicted = rf$predicted) %>% 
-    rownames_to_column(var = rn) %>% 
-    inner_join(select(dt_valid, one_of(c(rn, rf_response(rf), "artist"))), by = rn) %>% 
-    inner_join(ci, by = rn) %>% 
-    mutate(
-      resid = log(year_early) - predicted,
-      resid_hat = log(year_early) - y.hat)
-}
-
-
-
-resid <- data.frame(predicted = comp_date$predicted) %>% 
-  rownames_to_column(var = "painting_code") %>% 
-  inner_join(select(dt_compiled, painting_code, year_early, artist), by = "painting_code") %>% 
-  inner_join(motif_date_ci, by = "painting_code") %>% 
-  mutate(
-    resid = year_early - predicted,
-    resid_hat = year_early - y.hat)
-
-ggplot(resid, aes(x = year_early, color = artist)) +
-  geom_hline(yintercept = 0) +
-  geom_point(aes(y = resid_hat)) +
-  scale_color_brewer(type = "qual") +
-  geom_errorbar(aes(ymin = resid - var.hat, ymax = resid + var.hat), alpha = 0.3)
-```
-
-
-```{r}
-
-log_date <- run_rf(data = mutate(dt_valid, year_early = sqrt(year_early)), response = "year_early", predictors = motif_vars(), rownames = "painting_code", portion = which(dt_valid$artist_relationship == "Definite"), tests = which(dt_valid$artist_relationship != "Definite"))
-
-log_resid <- rf_resid(log_date)
-
-ggplot(log_resid, aes(x = year_early, y = resid_hat)) + 
-  geom_point()
-
-log_resid %>% 
-  arrange(resid) %>% 
-  mutate(ith = cumsum(resid), ln = row_number()) %>% 
-  ggplot(aes(x = ln, y = ith)) +
-  geom_point()
-```
 
